Footer collapse on AR fixed

--- a/assets/css/ar.css
+++ b/assets/css/ar.css
@@ -2888,7 +2888,7 @@ ul.staggered-list li {
   background-color: #ee6e73;
 }
 
-.page-footer .footer-copyleft {
+.page-footer .footer-copyright {
   overflow: hidden;
   min-height: 50px;
   display: -webkit-box;
